--- a/config/database.yml
+++ b/config/database.yml
@@ -1,7 +1,7 @@
 # Firebird 2.x database
  development:
   adapter: fb
-  database: d:\web_iviewer.fdb
+  database: d:\rails\web-contacts\db\web_iviewer.fdb
   username: sysdba
   password: masterkey
   host: localhost
@@ -11,7 +11,7 @@
 # Do not set this db to the same as development or production.
  test:
   adapter: fb
-  database: d:\web_iviewer_test.fdb
+  database: d:\rails\web-contacts\db\web_iviewer_test.fdb
   username: sysdba
   password: masterkey
   host: localhost
@@ -19,7 +19,7 @@
 
  production:
   adapter: fb
-  database: d:\web_iviewer_production.fdb
+  database: d:\rails\web-contacts\db\web_iviewer_production.fdb
   username: sysdba
   password: masterkey
   host: localhost
